# ansishow

./: .gitattributes  .gitignore  LICENSE  README.md  example.sh  mise.toml  pyproject.toml
ansishow/: __init__.py  __main__.py  ansi.py  game.py  images.py  show.py
