[tool.poetry]
name = "ansishow"
version = "1.0.0"
description = "Scroll some ANSi art on a display"
authors = ["Cameron Ruatta <dev@ruatta.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
