[project]
name = "ansishow"
version = "1.1.0"
description = "Scroll some ANSi art on a display"

authors = [
    { name = "Cameron Ruatta" },
]

requires-python = "<4.0,>=3.9"

dependencies = [
    "pygame==1.9.6",
]

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.12.9",
    "pyright<2.0.0,>=1.1.404",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff<1.0.0,>=0.12.9",
    "pyright<2.0.0,>=1.1.404",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"